namespace LudoGameNET.Api.Enums;
public enum GameState
{
    NotStarted,
    Playing,
    Finished
}