namespace LudoGameNET.Api.Enums;

public enum PieceState
{
    Base,
    OnBoard,
    Finished
}