namespace LudoGameNET.Api.Enums;

public enum PlayerColor
{
    Red,
    Green,
    Yellow,
    Blue
}