namespace LudoGameNET.Api.Enums;

public enum SquareType
{
    Yard,
    Common,
    Safe,
    HomeStretch,
    Goal
}