namespace LudoGameNET.Api.Interfaces;
public interface IDice
{
    int Value { get; set; }
}