using LudoGameNET.Api.Interfaces;

namespace LudoGameNET.Api.Models;

public class Dice : IDice
{
    public int Value { get; set;}
}