using LudoGameNET.Api.Interfaces;
using LudoGameNET.Api.Models;
using LudoGameNET.Api.Enums;
using System.Linq;

namespace LudoGameNET.Api.Models;

public class LudoGame
{
    private const int MinPlayers = 2;
    private const int MaxPlayers = 4;
    private const int PiecesPerPlayer = 4;
    private const int MaxConsecutiveSixes = 3;
    private static readonly Random _random = new();

    public List<IPlayer> Players { get; set; }
    public IBoard Board { get; set; }
    public IDice Dice { get; set; }
    public Dictionary<PlayerColor, List<Point>> Paths { get; set; }
    public int CurrentPlayerIndex { get; set; }
    public GameState State { get; set; }

    public LudoGame(List<PlayerColor> playerColors, IDice? dice = null)
    {
        var colors = playerColors ?? throw new ArgumentNullException(nameof(playerColors));

        if(colors.Count < MinPlayers || colors.Count > MaxPlayers)
        {
            throw new ArgumentException($"Game Requires Players Between {MinPlayers} Or {MaxPlayers} Players");
        }

        if(colors.Distinct().ToList().Count != colors.Count)
        {
            throw new ArgumentException($"Each Player Must Have Distinct Color.");
        }

        

    }

}