namespace LudoGameNET.Api.Models;

public readonly record struct Point (int Row, int Column);